fixed bug on z-index for detection detail

--- a/main/static/main/css/live.css
+++ b/main/static/main/css/live.css
@@ -214,6 +214,7 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    z-index: -1;
 }
 
 
